--- a/main.html
+++ b/main.html
@@ -7,6 +7,20 @@
 </head>
 
 <body>
+	<nav>
+		<ul>
+			<li><a href="https://github.com/abhi20-1996/contest">Home</a></li>
+			<li><a href="https://tally.so/r/3xV96r
+					?email=anshika@acciojob.com">About us</a></li>
+			<li><a href="https://course.acciojob.com/web-idle?question=689
+					854eb-c731-4552-8760-335f550fcf2c"Contact us</a></li>
+		</ul>
+	</nav>
+	<h1>3 random images</h1>
+	<ul>
+		<li><img src="https://picsum.photos/id/123/200/300" alt="rendom1"></li>
+		<li><img src="https://picsum.photos/id/124/200/300" alt="rendom2"></li>
+		<li><img src="https://picsum.photos/id/125/200/300" alt="rendom3"></li>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
