--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 			<li><a href="https://tally.so/r/3xV96r
 					?email=anshika@acciojob.com">About us</a></li>
 			<li><a href="https://course.acciojob.com/web-idle?question=689
-					854eb-c731-4552-8760-335f550fcf2c"Contact us</a></li>
+					854eb-c731-4552-8760-335f550fcf2c">Contact us</a></li>
 		</ul>
 	</nav>
 	<h1>3 random images</h1>
